WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47546
When a provisional load fails, the provisional URL returned from WKFrameCopyProvisionalURL should be empty
https://bugs.webkit.org/show_bug.cgi?id=47546
Summary
When a provisional load fails, the provisional URL returned from WKFrameCopyP...
Sam Weinig
Reported
2010-10-12 10:40:21 PDT
When a provisional load fails, the provisional URL returned from WKFrameCopyProvisionalURL should be empty.
Attachments
Patch
(2.56 KB, patch)
2010-10-12 17:14 PDT
,
Sam Weinig
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2010-10-12 10:40:43 PDT
<
rdar://problem/8540878
>
Sam Weinig
Comment 2
2010-10-12 17:14:46 PDT
Created
attachment 70573
[details]
Patch
Sam Weinig
Comment 3
2010-10-12 17:25:22 PDT
Landed in
r69621
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug