When a provisional load fails, the provisional URL returned from WKFrameCopyProvisionalURL should be empty <rdar://problem/8540878> https://bugs.webkit.org/show_bug.cgi?id=47546

Reviewed by Dan Bernstein.

WebKit2:

API Tests: FailedLoad (updated).

* UIProcess/WebFrameProxy.cpp:
(WebKit::WebFrameProxy::didFailProvisionalLoad): Empty out the provisional URL.

WebKitTools:

Add test.

* TestWebKitAPI/Tests/WebKit2/FailedLoad.cpp:
(TestWebKitAPI::didFailProvisionalLoadWithErrorForFrame):



Canonical link: https://commits.webkit.org/60215@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69621 268f45cc-cd09-0410-ab3c-d52691b4dbfc