WebKitTools/TestWebKitAPI/Tests/WebKit2/FailedLoad.cpp
@@ -39,6 +39,13 @@ static bool testDone;
 static void didFailProvisionalLoadWithErrorForFrame(WKPageRef page, WKFrameRef frame, WKTypeRef userData, const void* clientInfo)
 {
     TEST_ASSERT(WKFrameGetFrameLoadState(frame) == kWKFrameLoadStateFinished);
+
+    WKURLRef url = WKFrameCopyProvisionalURL(frame);
+    WKURLRef emptyURL = WKURLCreateWithUTF8CString("");
+    TEST_ASSERT(WKURLIsEqual(url, emptyURL));
+    WKRelease(url);
+    WKRelease(emptyURL);
+
     testDone = true;
 }
 
